test/good/classes/constructor01.px

class C def
    Bool x

    constructor def
        this.x = true
        print "constructor"

print C().x
