test/bad/classes/constructor05.px

class Test def
    constructor() def
        skip
    constructor() def
        skip
